fix server tests